Tue Mar  6 11:42:52 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/syck/lib/syck/rubytypes.rb (Exception.yaml_new): fix bug
	  that causes YAML serialization problem for Exception.
	  Exception#initialize doesn't use visible instance variable for
	  the exception message, so call the method with the message.
	  patched by Jingwen Owen Ou <jingweno AT gmail.com>.
	  http://github.com/ruby/ruby/pull/41

Fri Mar  2 22:09:03 2012  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* .travis.yml: Backport TravisCI configuration from trunk.

Thu Mar  1 18:39:44 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_join): honor input encodings than ASCII-8BIT.
	  [ruby-core:40338] [Bug #5483]

Tue Feb 28 11:56:52 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (debugflags): check if -ggdb is accepted.
	  [ruby-core:42875][Bug #6080]

Mon Feb 27 17:25:40 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (GetVpValueWithPrec): since methods
	  can be overridden, so should not make an assumption on the type
	  of results.  [ruby-core:42969][Bug #6093]

Mon Feb 27 02:28:17 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* regparse.c (add_code_range_to_buf0): wrong condition of duplicated
	  warnings.

Sun Feb 26 12:26:26 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_compile_each): call on special object instead of
	  self.  since stabby lambda is a syntax, so it should not be
	  affected by the context.  [ruby-core:42349][Bug #5966]

	* insns.def (send): no special deal for FCALL.  self should be put
	  on TOS instead.

Sat Feb 25 23:47:49 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (utime_internal): fix a variable missed to replace.
	  [ruby-core:42864] [Bug #6077]

Sat Feb 25 21:29:09 2012  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* test/ruby/test_literal.rb (TestRubyLiteral#test_special_const):
	  test for https://bugs.php.net/bug.php?id=61095
