@@ -1,5 +1,5 @@
 #define RUBY_VERSION "1.9.3"
-#define RUBY_PATCHLEVEL 157
+#define RUBY_PATCHLEVEL 158
 
 #define RUBY_RELEASE_DATE "2012-03-06"
 #define RUBY_RELEASE_YEAR 2012
